<resources>
    <string name="app_name">SCMApp</string>
    <!--common-->
    <string name="setting">设置</string>
    <string name="title">标题</string>
    <string name="clear_cache">清除缓存</string>
    <string name="push_notice">推送通知</string>
    <string name="about">关于</string>
    <string name="tip">提示</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="search">搜索</string>
    <!--/common-->
    <!--App-->
    <string name="deviceModel">Android Handheld Terminal</string>
    <!--/App-->
    <!--login-->
    <string name="loginUserNameLabel">账 号：</string>
    <string name="loginPasswordLabel">密 码：</string>
    <string name="loginSubmit">登录</string>
    <string name="loginRememberMe">记住密码</string>
    <string name="MENU_EXIT">退出</string>
    <string name="MENU_ABOUT">关于</string>
    <string name="MENU_CHECK">更新</string>
    <string name="MENU_ANYS">同步</string>
    <string name="aboutInfo">版权所有:北京金城丰来商贸中心</string>
    <string name="ok_label">确认</string>
    <string name="loginUserNameHint">请输入账号</string>
    <string name="userJsHint">请选择角色</string>
    <string name="loginPassWordHint">请输入密码</string>
    <string name="loginVersion">© 2000 -2019 北京金城丰来商贸中心</string>
    <string name="offLineMode">离线模式</string>
    <string name="registerNewDevice">注册新设备</string>
    <!--login_message-->
    <string name="message_pressing_return_key_again">再按一次返回键，退出SCM业务交互系统程序!</string>
    <!--/login-->
    <!--Register-->
    <string name="loginRegister">注 册</string>
    <string name="registerRemove">清 空</string>
    <string name="registerCancel">取 消</string>
    <string name="againPasswordLabel">确 认：</string>
    <string name="realNameLabel">姓 名：</string>
    <string name="userJs">角色：</string>
    <string name="telPhoneLabel">电 话：</string>
    <string name="idCordLabel">身份证：</string>
    <string name="cityLabel">省 份：</string>
    <string name="companyLabel">公 司：</string>
    <string name="againPassWordHint">请再次输入密码</string>
    <string name="realNameWordHint">请输入真实姓名</string>
    <string name="telPhoneWordHint">请输入电话号码</string>
    <string name="idCardWordHint">请输入身份证号码</string>
    <string name="companyWordHint">请选择所属公司</string>
    <string name="provinceWordHint">请选择所属省份</string>
    <string name="registered">注册新用户</string>
    <string name="passCheckMsg">两次输入的密码不一致！</string>
    <string name="idCardCheckMsg">身份证格式不正确！</string>
    <string name="compNameTitle">选择所属公司</string>
    <string name="userJsCheckMsg">选择用户角色</string>
    <!--OutByDistributionActivity-->
    <string name="searchByBillStatus">按以下单据状态查询:</string>
    <string name="billStatusApprove">已审确认</string>
    <string name="billStatusPass">已审通过</string>
    <string name="billStatusUndone">未出完</string>
    <string name="billStatusAll">显示全部</string>
    <!--/OutByDistributionActivity-->
    <!--OutByDistributeDocDetailAty-->
    <string name="wipeCache">清除缓存</string>
    <string name="wipeExceptionCode">清除异常码</string>
    <string name="reduceBox">减箱</string>
    <!--/OutByDistributeDocDetailAty-->
    <!--MainActivity-->
    <string name="wipeCacheAll">清除全部缓存</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <!--/MainActivity-->
</resources>
