<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/searchView"
            android:title="@string/search"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="ifRoom"/>
    <item android:id="@+id/searchByBillStatus"
          android:title="@string/searchByBillStatus"
          android:icon="@drawable/img_setting"
          app:showAsAction="never"/>
    <item android:id="@+id/billStatusAll"
          android:title="@string/billStatusAll"
          android:icon="@drawable/img_setting"
          app:showAsAction="never"/>
    <item android:id="@+id/billStatusApprove"
          android:title="@string/billStatusApprove"
          android:icon="@drawable/img_setting"
          app:showAsAction="never"/>
    <item android:id="@+id/billStatusPass"
          android:title="@string/billStatusPass"
          android:icon="@drawable/img_setting"
          app:showAsAction="never"/>
    <item android:id="@+id/billStatusUndone"
          android:title="@string/billStatusUndone"
          android:icon="@drawable/img_setting"
          app:showAsAction="never"/>
</menu>