<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="230dp" android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:background="@drawable/shape_bg_rounded_rectangle_white_all"
        android:orientation="vertical">
    <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:paddingTop="5dp"
              android:paddingBottom="5dp"
              android:textSize="20sp"
              android:textColor="@color/black"
              android:background="@drawable/shape_bg_rounded_rectangle_blue_up"
              android:text="@string/tip"/>
    <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
              android:layout_height="120dp"
              android:gravity="center"
              android:paddingTop="5dp"
              android:paddingBottom="5dp"
              android:textSize="18sp"
              android:textColor="@color/black"
              tools:text="你确定要退出登录吗?"/>
    <View android:layout_width="match_parent" android:layout_height="1dp"
    android:background="@color/black"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingStart="6dp"
                  android:paddingEnd="6dp"
                  android:orientation="horizontal">
        <Button
                android:id="@+id/btnNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/cancel" tools:ignore="ButtonStyle"/>
        <View android:layout_width="1dp" android:layout_height="match_parent"
              android:background="@color/black"/>
        <Button android:id="@+id/btnYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:text="@string/confirm" tools:ignore="ButtonStyle"/>

    </LinearLayout>
</LinearLayout>